# caderno

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
books/: index.md  myst.yml
books/guia-myst/: 01-fundamentos.md  02-notebooks-intro.ipynb  02-notebooks-intro.nbconvert.ipynb  03-notebooks-build.ipynb  03-notebooks-client.ipynb  04-visualizacao.md  05-componentes-ui.md  06-cientifico.md  07-referencias.md  08-plugins.md  09-exports.md  exemplo-springer.md  index.md  myst.yml  qrcode.mjs  references.bib
